--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ services:
   app:
     build: ./infra/php
     volumes:
-      - ./src:/data
+      - ./src:/var/www/html
   web:
     image: nginx:1.20-alpine
     ports: 
       - 8080:80
     volumes:
-      - ./src:/data
+      - ./src:/var/www/html
       - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    working_dir: /data
+    working_dir: /Users/ikedahiromu/develop/docker-laravel-handson/src
 
 
