--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./src:/var/www/html
       - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    working_dir: $PWD/develop/docker-laravel-handson/src
+    working_dir: $PWD/src
   db:
     build: ./infra/mysql
     volumes:
